# mimicking-mindsets-v2

./: .dockerignore  .gitignore  Dockerfile  EVALUATION_SUMMARY.md  README.md  README_Evaluation.md  README_Phase1.md  README_Phase2.md  api_server.py  docker-compose.yml  evaluation_pipeline.py  main.py  memory.py  multi_agent_orchestrator.py  orchestrator.py  persona_agents.py  persona_prompts.py  pyproject.toml  requirements.txt  run_streamlit.py  runtime.py  streamlit_app.py  styles.css  test_phase1.py  test_phase2.py
.streamlit/: config.toml
agents/: multi_agent_orchestrator.py  persona_agents.py  persona_prompts.py
demo_evaluation_results/: summary_table.csv
docs/: technical_documentation.md
evaluation/: demo_evaluation.py  evaluation_pipeline.py  langsmith_tracing.py  run_evaluation.py
evaluation/demo_evaluation_results/: detailed_results.json
evaluation/evaluation_results/: detailed_results.json  summary_table.csv
evaluation_results/: summary_table_updated.csv
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatMessage.jsx  PersonaCard.jsx
frontend/src/services/: api.js
knowledge-base/preprocess/: build_kb.py
tests/: __init__.py  test_phase1.py  test_phase2.py
utils/: logging_config.py
web-interface/: api_server.py  start_backend.py
web-interface/frontend/: Dockerfile.prod  README_Frontend.md  index.html  nginx.conf  package-lock.json  package.json  start_frontend.bat  start_frontend.sh
web-interface/frontend/src/: App.jsx
web-interface/frontend/src/components/: AgentTraces.jsx  ChatMessage.jsx  ChatSidebar.jsx  ErrorMessage.jsx  LoadingIndicator.jsx  PersonaCard.jsx
web-interface/frontend/src/services/: api.js
