[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=8.0.4",
    "fastapi>=0.115.12",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-google-genai>=2.1.5",
    "langgraph>=0.4.8",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.7.0",
    "requests>=2.32.4",
    "sentence-transformers>=4.1.0",
    "uvicorn>=0.34.3",
]
