[project]
name = "mimicking-mindsets"
version = "0.1.0"
description = "Multi-agent AI system simulating Turkish intellectuals Erol Güngör and Cemil Meriç"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "duckduckgo-search>=8.0.4",
    "fastapi>=0.115.12",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-google-genai>=2.1.5",
    "langgraph>=0.4.8",
    "langsmith>=0.3.45",
    "langtrace-python-sdk>=3.8.18",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.7.0",
    "ragas>=0.2.15",
    "requests>=2.32.4",
    "sentence-transformers>=4.1.0",
    "tabulate>=0.9.0",
    "uvicorn>=0.34.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "evaluation", "web-interface", "knowledge-base", "tests"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]
